--- a/Pages/Forms/package.json
+++ b/Pages/Forms/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/CSC-WebApps/Course#readme",
   "dependencies": {
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "body-parser": "1.19.0"
   }
 }
