--- a/Pages/REST/package.json
+++ b/Pages/REST/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "pm2 start index.js --name object-srv",
+    "stop": "pm2 stop object-srv"
   },
   "author": "",
   "license": "ISC",
