--- a/Pages/Forms/package.json
+++ b/Pages/Forms/package.json
@@ -17,7 +17,6 @@
   },
   "homepage": "https://github.com/CSC-WebApps/Course#readme",
   "dependencies": {
-    "express": "^4.17.1",
-    "body-parser": "1.19.0"
+    "express": "^4.17.1"
   }
 }
