--- a/Pages/Login/package.json
+++ b/Pages/Login/package.json
@@ -17,6 +17,8 @@
   },
   "homepage": "https://github.com/CSC-WebApps/Course#readme",
   "dependencies": {
-    "express": "^4.17.1"
+    "cookie-parser": "^1.4.5",
+    "express": "^4.17.1",
+    "express-session": "^1.17.2"
   }
 }
