--- a/Pages/Login/package.json
+++ b/Pages/Login/package.json
@@ -18,7 +18,6 @@
   "homepage": "https://github.com/CSC-WebApps/Course#readme",
   "dependencies": {
     "cookie-parser": "^1.4.5",
-    "express": "^4.17.1",
-    "express-session": "^1.17.2"
+    "express": "^4.17.1"
   }
 }
