--- a/Pages/Socket/package.json
+++ b/Pages/Socket/package.json
@@ -5,12 +5,14 @@
   "main": "index.js",
   "dependencies": {
     "express": "^4.17.1",
+    "firebase": "^9.1.3",
     "socket.io": "^4.3.0"
   },
   "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "type": "module",  
   "author": "",
   "license": "ISC"
 }
